<resources>
    <string name="app_name">About Me</string>
    <string name="name">Froggie Fog</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">"Hi, my name is Froggy Fog.\nI love to eat insects.\nI usually hunt at night. However hunting at night is just as dangerous as hunting in the day.\nThere are many predators that one cannot see. So I need to be very careful not to get eaten.\n Hi, my name is Froggy Fog.\nI love to eat insects.\nI usually hunt at night. However hunting at night is just as dangerous as hunting in the day.\nHi, my name is Froggy Fog.\nI love to eat insects.\n\nI usually hunt at night. However hunting at night is just as dangerous as hunting in the day.\nThere are many predators that one cannot see. So I need to be very careful not to get eaten.\n Hi, my name is Froggy Fog.\nI love to eat insects.     \nHi, my name is Froggy Fog.\nI love to eat insects.\n\nI usually hunt at night. However hunting at night is just as dangerous as hunting in the day.\nThere are many predators that one cannot see. So I need to be very careful not to get eaten.\n Hi, my name is Froggy Fog.\nI love to eat insects.\nI usually hunt at night. However hunting at night is just as dangerous as hunting in the day.\nHi, my name is Froggy Fog.\nI love to eat insects.\n\nI usually hunt at night. However hunting at night is just as dangerous as hunting in the day.\nThere are many predators that one cannot see. So I need to be very careful not to get eaten.\n Hi, my name is Froggy Fog.\nI love to eat insects.\n\n\n\n\n        \n        \n        \n\n        \n\n\n    "</string>
    <string name="user_nickname">What is your nickname?</string>
    <string name="done_button">Done</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
</resources>